docs/v2.1.0/index.md
---
title: "Home"
layout: default
---

[![NuGet Badge](https://buildstats.info/nuget/Arcus.EventGrid.All?packageVersion=2.1.0)](https://www.nuget.org/packages/Arcus.EventGrid.All/)

# Installation

```shell
PM > Install-Package Arcus.EventGrid.All
```

# Features

- Support for publishing events to an Event Grid Topic ([docs](features/publishing-events))
- Support for handling endpoint validation handshake ([docs](features/endpoint-validation))
- Provides event contracts for a subset of Azure services ([docs](features/azure-event-contracts))
- Provides tooling for writing integration tests ([docs](features/running-integration-tests))
- Support for deserializing events ([docs](features/deserializing-events))
- Support for creating your own events

## Older versions

- [v1.0.0](../v1.0.0)
- [v1.0.1](../v1.0.1)
- [v1.0.2](../v1.0.2)
- [v1.1.0](../v1.1.0)
- [v2.0.0](../v2.0.0)

# License
This is licensed under The MIT License (MIT). Which means that you can use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the web application. But you always need to state that Codit is the original author of this web application.

*[Full license here](https://github.com/arcus-azure/arcus.eventgrid/blob/master/LICENSE)*