docs/v3.0.0/index.md
---
title: "Home"
layout: default
---

[![NuGet Badge](https://buildstats.info/nuget/Arcus.EventGrid.All?packageVersion=3.0.0)](https://www.nuget.org/packages/Arcus.EventGrid.All/)

# Installation

```shell
PM > Install-Package Arcus.EventGrid.All
```

# Features

- Support for publishing events to an Event Grid Topic ([docs](features/publishing-events))
- Support for handling endpoint validation handshake ([docs](features/endpoint-validation))
- Provides tooling for writing integration tests ([docs](features/running-integration-tests))
- Support for deserializing official Azure or custom events according to Event Grid & CloudEvent schema ([docs](features/deserializing-events))
- Support for creating your own events ([docs](features/create-custom-events))

## Older Versions

- [v1.0.0](../v1.0.0)
- [v1.0.1](../v1.0.1)
- [v1.0.2](../v1.0.2)
- [v1.1.0](../v1.1.0)
- [v2.0.0](../v2.0.0)
- [v2.1.0](../v2.1.0)
- [v2.2.0](../v2.2.0)
- [v2.3.0](../v2.3.0)
- [v2.4.0](../v2.4.0)

# License
This is licensed under The MIT License (MIT). Which means that you can use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the web application. But you always need to state that Codit is the original author of this web application.

*[Full license here](https://github.com/arcus-azure/arcus.eventgrid/blob/master/LICENSE)*